// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toggle Controlled Toggle 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
          <p
            class="sc-AxhCb iNRqzd"
            color="currentColor"
            font-size="16px"
          >
            on
          </p>
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
          <p
            class="sc-AxhCb iNRqzd"
            color="currentColor"
            font-size="16px"
          >
            off
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Toggle 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <div
          class="ToggleButton__Switch-asgrb8-1 irhlNv"
        >
          <input
            aria-required="false"
            class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
            type="checkbox"
            value="on"
          />
          <span
            class="ToggleButton__Slider-asgrb8-0 bLvWmF"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Toggle set to defaultToggled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Toggle set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kjxgat"
          disabled=""
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-asgrb8-2 gajnWZ"
              disabled=""
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bQpZex"
              disabled=""
            />
          </div>
          <p
            class="sc-AxhCb kigzKX"
            color="currentColor"
            disabled=""
            font-size="16px"
          >
            off
          </p>
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kjxgat"
          disabled=""
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-asgrb8-2 gajnWZ"
              disabled=""
              id="toggle-2"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bQpZex"
              disabled=""
            />
          </div>
          <p
            class="sc-AxhCb kigzKX"
            color="currentColor"
            disabled=""
            font-size="16px"
          >
            on
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Toggle with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
          <span
            class="sc-AxhCb gXnznd"
            color="darkGrey"
            font-size="12px"
          >
            (Required)
          </span>
          <p
            class="sc-AxhCb sc-fzokOt itwNrV"
            color="currentColor"
            font-size="16px"
          >
            Turns setting on/off
          </p>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="true"
              checked=""
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              required=""
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
          <p
            class="sc-AxhCb iNRqzd"
            color="currentColor"
            font-size="16px"
          >
            on
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle With custom id 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              id="my-custom-id"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
          <p
            class="sc-AxhCb iNRqzd"
            color="currentColor"
            font-size="16px"
          >
            off
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle With long text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
          <p
            class="sc-AxhCb iNRqzd"
            color="currentColor"
            font-size="16px"
          >
            this state has a very long text label to explain it's state
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle With text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-j2axnv-0 kemUmZ"
        >
          <div
            class="ToggleButton__Switch-asgrb8-1 irhlNv"
          >
            <input
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-asgrb8-0 bLvWmF"
            />
          </div>
          <p
            class="sc-AxhCb iNRqzd"
            color="currentColor"
            font-size="16px"
          >
            off
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
